--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -1,8 +1,12 @@
+spring:
+  config:
+    import: "optional:classpath:application-dev-local.yml"
+
 sky:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    host: localhost
-    port: 3306
+    host: 127.0.0.1
+    port: 3307
     database: sky_take_out
-    username: root
-    password: root
+    username: ${DB_USERNAME:}
+    password: ${DB_PASSWORD:}
