数据库密码加密

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -10,3 +10,6 @@ sky:
     database: sky_take_out
     username: ${DB_USERNAME:}
     password: ${DB_PASSWORD:}
+security:
+  password:
+    bcrypt-cost: 12
