--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /sky-server/src/main/resources/117.72.195.4
 /docs/REFACTORING_SUMMARY.md
 /docs/DEVELOPMENT_SPECIFICATION.md
+/docs/REDIS WSL2部署.md
