--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,17 +18,27 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: 上传代码到服务器
+      - name: 设置 JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Maven 构建
+        run: mvn clean package -DskipTests -B
+
+      - name: 上传 JAR 到服务器
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "."
-          target: "/opt/sky/skyBackend"
-          overwrite: true
+          source: "sky-server/target/sky-server-1.0-SNAPSHOT.jar"
+          target: "/opt/sky/backend"
+          strip_components: 2
 
-      - name: 重新构建并启动
+      - name: 重启后端服务
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
