修复: 使用Docker容器构建

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # 苍穹外卖后端 - 自动部署到服务器
-# push 到 main 分支时自动触发
+# push 到 master 分支时自动触发
 
 name: Deploy Backend
 
@@ -13,20 +13,14 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    container: maven:3.8.6-eclipse-temurin-17
     
     steps:
       - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: 设置 JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'zulu'
-          cache: maven
-
       - name: Maven 构建
-        run: mvn clean package -DskipTests -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+        run: mvn clean package -DskipTests -B
 
       - name: 上传 JAR 到服务器
         uses: appleboy/scp-action@v0.1.7
