--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,31 +18,24 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: 设置 JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '17'
-
-      - name: Maven 构建
-        run: mvn clean package -DskipTests -B
-
-      - name: 上传 JAR 到服务器
+      - name: 上传代码到服务器
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "sky-server/target/*.jar"
-          target: "/opt/sky/backend"
+          source: "."
+          target: "/opt/sky/skyBackend"
+          overwrite: true
 
-      - name: 重启后端服务
+      - name: 重新构建并启动
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          command_timeout: 30m
           script: |
             cd /opt/sky
-            docker compose restart backend
+            docker compose up -d --build backend
             echo "✅ 后端部署完成！"
