--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,35 +36,16 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           command_timeout: 100m
           script: |
+            set -euo pipefail
             cd /opt/sky
             
-            # 构建后端（带重试机制，最多尝试 3 次）
-            # 利用 Docker 层缓存：pom.xml 不变时不会重新下载依赖
-            MAX_RETRIES=3
-            RETRY_COUNT=0
-            BUILD_SUCCESS=false
+            export DOCKER_BUILDKIT=1
+            export COMPOSE_DOCKER_CLI_BUILD=1
             
-            while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
-              RETRY_COUNT=$((RETRY_COUNT + 1))
-              echo "🔨 第 $RETRY_COUNT 次构建尝试..."
-              
-              if docker compose build backend; then
-                BUILD_SUCCESS=true
-                echo "✅ 构建成功！"
-                break
-              else
-                echo "❌ 构建失败，等待 10 秒后重试..."
-                docker builder prune -f 2>/dev/null || true
-                sleep 10
-              fi
-            done
+            # 构建（失败直接退出，不清缓存）
+            docker compose build backend
             
-            if [ "$BUILD_SUCCESS" = false ]; then
-              echo "❌ 构建失败，已重试 $MAX_RETRIES 次"
-              exit 1
-            fi
-            
-            # 启动服务
+            # 启动/更新
             docker compose up -d backend
-            docker image prune -f 2>/dev/null || true
+            
             echo "✅ 后端部署完成！"
