fix: 部署前清理旧代码目录，解决权限问题和文件残留

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,17 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
+      - name: 清理服务器旧代码
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            # 清理旧的代码目录（保留 docker 相关配置）
+            rm -rf /opt/sky/skyBackend
+            mkdir -p /opt/sky/skyBackend
+
       - name: 上传代码到服务器
         uses: appleboy/scp-action@v0.1.7
         with:
