--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,3 @@
-# 苍穹外卖后端 - 自动部署到服务器
-# push 到 master 分支时自动触发
-
 name: Deploy Backend
 
 on:
@@ -16,18 +13,16 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: 准备服务器目录（只清理代码，不动 /opt/sky 下其他东西）
+      - name: 准备服务器目录
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          command_timeout: 30m
           script: |
             set -euo pipefail
-            mkdir -p /opt/sky/skyBackend
-            # 只清空代码目录内容（避免 rm -rf 误删目录本身）
-            rm -rf /opt/sky/skyBackend/*
+            sudo mkdir -p /opt/sky/skyBackend
+            sudo chown -R $USER:$USER /opt/sky/skyBackend
 
       - name: 上传代码到服务器（排除 target/.git/.idea）
         uses: appleboy/scp-action@v0.1.7
@@ -35,11 +30,11 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: ".,!.git,!.git/**,!**/target/**,!.idea,!.idea/**"
+          source: "./,!.git,!.git/**,!**/target/**,!.idea,!.idea/**"
           target: "/opt/sky/skyBackend"
           overwrite: true
 
-      - name: 构建并启动 backend
+      - name: 构建并滚动更新 backend
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -53,9 +48,17 @@ jobs:
             export DOCKER_BUILDKIT=1
             export COMPOSE_DOCKER_CLI_BUILD=1
 
-            # 构建 + 更新（依赖 Dockerfile 的缓存，后续不会每次都刷 2000 行下载）
-            docker compose build backend
-            docker compose up -d backend
+            # 关键：如果基础镜像已在本机，就不要每次都去 Docker Hub 探测
+            # 没有才 pull（配合服务器镜像加速后，pull 才会稳定）
+            for img in "maven:3.9.6-eclipse-temurin-17" "eclipse-temurin:17-jre"; do
+              if ! docker image inspect "$img" >/dev/null 2>&1; then
+                echo "Pulling base image: $img"
+                docker pull "$img"
+              fi
+            done
 
+            docker compose build --pull=false backend
+            docker compose up -d --no-deps backend
             docker compose ps
+
             echo "✅ 后端部署完成！"
