--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,13 @@
+# 苍穹外卖后端 - 自动部署到服务器
+# push 到 master 分支时自动触发
+
 name: Deploy Backend
 
 on:
   push:
     branches: [master]
+
+  # 手动触发（GitHub 页面点击按钮）
   workflow_dispatch:
 
 jobs:
@@ -13,7 +18,7 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: 准备服务器目录
+      - name: 清理服务器旧代码（不使用 sudo）
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -21,20 +26,22 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             set -euo pipefail
-            sudo mkdir -p /opt/sky/skyBackend
-            sudo chown -R $USER:$USER /opt/sky/skyBackend
+            rm -rf /opt/sky/skyBackend
+            mkdir -p /opt/sky/skyBackend
+            test -w /opt/sky/skyBackend
+            echo "✅ 清理完成：/opt/sky/skyBackend"
 
-      - name: 上传代码到服务器（排除 target/.git/.idea）
+      - name: 上传代码到服务器（排除无用目录）
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "./,!.git,!.git/**,!**/target/**,!.idea,!.idea/**"
+          source: ".,!.git,!.git/**,!**/target/**,!.idea,!.idea/**"
           target: "/opt/sky/skyBackend"
           overwrite: true
 
-      - name: 构建并滚动更新 backend
+      - name: 重新构建并启动（不主动 pull，避免 Docker Hub 超时）
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -48,17 +55,11 @@ jobs:
             export DOCKER_BUILDKIT=1
             export COMPOSE_DOCKER_CLI_BUILD=1
 
-            # 关键：如果基础镜像已在本机，就不要每次都去 Docker Hub 探测
-            # 没有才 pull（配合服务器镜像加速后，pull 才会稳定）
-            for img in "maven:3.9.6-eclipse-temurin-17" "eclipse-temurin:17-jre"; do
-              if ! docker image inspect "$img" >/dev/null 2>&1; then
-                echo "Pulling base image: $img"
-                docker pull "$img"
-              fi
-            done
-
+            # 关键点：不拉取远端基础镜像，避免 registry 超时
             docker compose build --pull=false backend
-            docker compose up -d --no-deps backend
-            docker compose ps
 
+            # 启动/更新
+            docker compose up -d backend
+
+            docker compose ps
             echo "✅ 后端部署完成！"
