--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,23 +8,11 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
+      - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: Clean remote code dir
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            set -euo pipefail
-            rm -rf /opt/sky/skyBackend
-            mkdir -p /opt/sky/skyBackend
-
-      - name: Upload source to server
+      - name: 上传代码到服务器（排除 .git/target/.idea）
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -34,13 +22,13 @@ jobs:
           target: "/opt/sky/skyBackend"
           overwrite: true
 
-      - name: Build & Restart backend
+      - name: 重新构建并启动（不 pull 基础镜像）
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          command_timeout: 120m
+          command_timeout: 100m
           script: |
             set -euo pipefail
             cd /opt/sky
@@ -48,9 +36,9 @@ jobs:
             export DOCKER_BUILDKIT=1
             export COMPOSE_DOCKER_CLI_BUILD=1
 
-            # 不拉取远端基础镜像，避免 DockerHub 超时
+            # 关键点：不拉取远端基础镜像，避免 registry 超时
             docker compose build --pull=false backend
             docker compose up -d backend
             docker compose ps
 
-            echo "✅ 后端部署完成"
+            echo "后端部署完成"
