--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,57 +12,51 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 0) 先检查 secrets 是否存在（避免空跑）
-      - name: Check SSH secrets
+      # 可选：出问题时一眼看出工作目录里到底有什么
+      - name: Debug - list workspace
         run: |
-          if [ -z "${{ secrets.SERVER_HOST }}" ]; then
-            echo "SERVER_HOST is empty"
-            exit 1
-          fi
-          if [ -z "${{ secrets.SERVER_USER }}" ]; then
-            echo "SERVER_USER is empty"
-            exit 1
-          fi
-          if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
-            echo "SSH_PRIVATE_KEY is empty"
-            exit 1
-          fi
+          pwd
+          ls -la
+          find . -maxdepth 3 -type f | head -n 200
 
-      # 1) 上传源码到服务器 /opt/sky/skyBackend
       - name: Upload source to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
+          port: ${{ secrets.SSH_PORT }}
           overwrite: true
           target: /opt/sky/skyBackend
           source: |
             pom.xml
-            sky-common/**
-            sky-pojo/**
-            sky-server/**
-            backend/Dockerfile
+            mvn-settings.xml
+            Dockerfile
+            .dockerignore
+            .mvn
+            mvnw
+            mvnw.cmd
+            sky-common
+            sky-pojo
+            sky-server
 
-      # 2) 服务器上 build + up
       - name: Build & Restart backend
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
+          port: ${{ secrets.SSH_PORT }}
           command_timeout: 30m
           script: |
             set -euo pipefail
 
-            mkdir -p /opt/sky/skyBackend
+            mkdir -p /opt/sky /opt/sky/skyBackend
 
             export DOCKER_BUILDKIT=1
             export COMPOSE_DOCKER_CLI_BUILD=1
 
-            # 你服务器上现在是 10GB（10737418240），这里必须一致
+            # 幂等：没有 skybuilder 才创建；keepstorage=10GB(字节)
             if ! docker buildx inspect skybuilder >/dev/null 2>&1; then
               docker buildx create --name skybuilder --driver docker-container --use \
                 --buildkitd-flags '--oci-worker-gc-keepstorage=10737418240'
@@ -72,18 +66,12 @@ jobs:
 
             cd /opt/sky
 
+            # 基础镜像预拉，避免网络抖动
             docker pull maven:3.9.6-eclipse-temurin-17 || true
             docker pull eclipse-temurin:17-jre || true
 
             docker compose build --pull=false backend
             docker compose up -d backend
             docker compose ps
-
-            # 如果 unhealthy，打印日志并失败
-            if docker compose ps --format json | grep -q '"Service":"backend".*"Health":"unhealthy"'; then
-              echo "backend unhealthy, tail logs:"
-              docker compose logs -n 200 backend || true
-              exit 1
-            fi
 
             echo "✅ 后端部署完成"
