--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,76 +2,62 @@ name: Deploy Backend
 
 on:
   push:
-    branches: ["master"]
+    branches: [master]
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
+      - name: 拉取代码
         uses: actions/checkout@v4
 
-      # 可选：出问题时一眼看出工作目录里到底有什么
-      - name: Debug - list workspace
-        run: |
-          pwd
-          ls -la
-          find . -maxdepth 3 -type f | head -n 200
-
-      - name: Upload source to server
+      - name: 上传代码到服务器（排除 .git/target/.idea）
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT }}
+          source: ".,!.git,!.git/**,!**/target/**,!.idea,!.idea/**"
+          target: "/opt/sky/skyBackend"
           overwrite: true
-          target: /opt/sky/skyBackend
-          source: |
-            pom.xml
-            mvn-settings.xml
-            Dockerfile
-            .dockerignore
-            .mvn
-            mvnw
-            mvnw.cmd
-            sky-common
-            sky-pojo
-            sky-server
 
-      - name: Build & Restart backend
+      - name: 重新构建并启动（固定 builder + 不清缓存）
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          command_timeout: 30m
+          command_timeout: 100m
           script: |
             set -euo pipefail
 
-            mkdir -p /opt/sky /opt/sky/skyBackend
+            cd /opt/sky
 
+            # 1) 强制 compose 走 BuildKit/buildx
             export DOCKER_BUILDKIT=1
             export COMPOSE_DOCKER_CLI_BUILD=1
 
-            # 幂等：没有 skybuilder 才创建；keepstorage=10GB(字节)
+            # 2) 要求 buildkit 配置文件存在（用于 docker.io 镜像源/mirror，避免 registry 超时）
+            if [ ! -f /opt/sky/buildkitd.toml ]; then
+              echo "ERROR: /opt/sky/buildkitd.toml not found. Please create it first."
+              exit 1
+            fi
+
+            # 3) 确保 buildx builder 存在且被使用（幂等；不要 rm）
             if ! docker buildx inspect skybuilder >/dev/null 2>&1; then
               docker buildx create --name skybuilder --driver docker-container --use \
+                --driver-opt network=host \
+                --config /opt/sky/buildkitd.toml \
                 --buildkitd-flags '--oci-worker-gc-keepstorage=10737418240'
+            else
+              docker buildx use skybuilder
             fi
-            docker buildx use skybuilder
-            docker buildx inspect --bootstrap >/dev/null
+            docker buildx inspect --bootstrap skybuilder >/dev/null
 
-            cd /opt/sky
-
-            # 基础镜像预拉，避免网络抖动
-            docker pull maven:3.9.6-eclipse-temurin-17 || true
-            docker pull eclipse-temurin:17-jre || true
-
-            docker compose build --pull=false backend
+            # 4) 构建并启动（不强制 no-cache；不每次 pull）
+            docker compose --progress=plain build --pull=false backend
             docker compose up -d backend
             docker compose ps
 
-            echo "✅ 后端部署完成"
+            echo "后端部署完成"
